# app/Http/Controllers/ProductsController.php
@@ -9,11 +9,17 @@ use Illuminate\Http\Resources\Json\ResourceCollection;
 
 class ProductsController extends Controller
 {
+    public function __construct()
+    {
+        $this->middleware('auth:sanctum');
+    }
+
     /**
      * @OA\Get(
      *   tags={"Products"},
      *   path="/api/v1/products",
      *   summary="Get product index",
+     *   security={{"Bearer token":{}}},
      *
      *   @OA\Response(
      *       response=200,
@@ -23,11 +29,14 @@ class ProductsController extends Controller
      *   ),
      *
      *   @OA\Response(response=422, description="Unprocessable Content"),
-     *   @OA\Response(response=403, description="Forbidden"),
+     *   @OA\Response(response=401, description="Unauthorized"),
      * )
      */
     public function index(ProductIndexRequest $request): ResourceCollection
     {
+        // Just example. This check is unnecessary
+        $this->authorize('is-user');
+
         $name = $request->validated('name');
 
         $query = $name ?
