# storage/api-docs/api-docs.json
@@ -76,13 +76,13 @@
                 }
             }
         },
-        "/api/v1/auth/getaccount": {
+        "/api/v1/auth/user": {
             "get": {
                 "tags": [
                     "Auth"
                 ],
                 "summary": "Get account data",
-                "operationId": "e24abf371e10f47403cae9f3c7cb23d3",
+                "operationId": "34cdbf39a271781c14b395ba3685903c",
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -105,7 +105,12 @@
                     "403": {
                         "description": "Forbidden"
                     }
-                }
+                },
+                "security": [
+                    {
+                        "Bearer token": []
+                    }
+                ]
             }
         },
         "/api/v1/products": {
@@ -134,10 +139,15 @@
                     "422": {
                         "description": "Unprocessable Content"
                     },
-                    "403": {
-                        "description": "Forbidden"
+                    "401": {
+                        "description": "Unauthorized"
                     }
-                }
+                },
+                "security": [
+                    {
+                        "Bearer token": []
+                    }
+                ]
             }
         }
     },
